test/runtime/fail/comments/missing_nested_terminator.hy

// expect error: Unterminated block comment

/*
hello there
/*
internal nestedness
*/
